--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,31 +17,6 @@ body {
   background-size: cover;
 }
 
-@font-face {
-  font-family: "ButtonTipo";
-  src: url("../images/tipo2.ttf") format("truetype"); /* Ruta de la tipografía y formato */
-}
-
-#splash-screen h1 {
-  position: absolute;
-  top: 5%;
-  right: -3%;
-  width: 40%;
-  padding: 10%;
-  color: #a27026;
-  font-size: 33px;
-}
-
-#splash-screen p {
-  position: absolute;
-  top: 20%;
-  right: -3%;
-  width: 40%;
-  padding: 10%;
-  color: #a27026;
-  font-size: 33px;
-}
-
 #start-btn,
 #restart-btn-gameover,
 #restart-btn-youwon {
@@ -55,8 +30,37 @@ body {
 }
 
 #start-btn {
+  position: relative;
   width: 400px !important;
   cursor: pointer;
+  top: 10%;
+  margin-left: 620px;
+}
+
+
+@font-face {
+  font-family: "ButtonTipo";
+  src: url("../images/tipo2.ttf") format("truetype"); /* Ruta de la tipografía y formato */
+}
+
+#splash-screen h1 {
+  position: absolute;
+  top: 2%;
+  right: -3%;
+  width: 40%;
+  padding: 10%;
+  color: #a27026;
+  font-size: 33px;
+}
+
+#splash-screen p {
+  position: absolute;
+  top: 15%;
+  right: -3%;
+  width: 40%;
+  padding: 10%;
+  color: #a27026;
+  font-size: 33px;
 }
 
 #game-screen {
